syntax = "proto3";

package finances.summary;

import "google/protobuf/any.proto";
import "category/category.proto";
import "movement/movement.proto";

service SummaryService {
  rpc Balance(google.protobuf.Any) returns (stream Balance) {}
  rpc Expenses(google.protobuf.Any) returns (stream Expenses) {}
  rpc LastMovements(google.protobuf.Any) returns (stream Movements) {}
}

message Expense {
  float amount = 1;
  float percentage = 2;
  Category category = 3;
}

message Expenses {
  repeated Expense day = 1;
  repeated Expense week = 2;
  repeated Expense month = 3;
}

message Balance {
  float balance = 1;
  float incomeMonth = 2;
  float expenseMonth = 3;
  float incomeYear = 4;
  float expenseYear = 5;
}
